--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 </head>
 <body>
     <div class="container">
+        <href="https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/speed.png">
         <div class="title">Test de velocidad MTM</div>
         <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
         <div>Velocidad de descarga</div>
