--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
 
-            const imageUrl = "https://e7.pngegg.com/pngimages/261/601/png-clipart-logo-brand-product-design-labor-residential-speed-limit-25-angle-company-thumbnail.png";
+            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg";
             const fileSize = 146000; // Tamaño aproximado de la imagen en bytes
 
             // Mide el tiempo que toma descargar el archivo
