--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
 
-            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg";
+            const imageUrl = "#";
             const fileSize = 146000; // Tamaño aproximado de la imagen en bytes
 
             // Mide el tiempo que toma descargar el archivo
