--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test de Velocidad MTM</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,7 +24,7 @@
             background-color: rgba(0, 0, 0, 0.5);
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            width: 90%; /* Ajuste para pantallas más pequeñas */
+            width: 90%;
         }
         .title {
             font-size: 24px;
@@ -52,62 +53,74 @@
         .button:hover {
             background-color: #0077cc;
         }
-
-        /* Media Query para pantallas pequeñas */
-        @media (max-width: 768px) {
-            .title {
-                font-size: 20px;
-            }
-            .speed {
-                font-size: 28px;
-            }
-            .units {
-                font-size: 16px;
-            }
-            .button {
-                font-size: 14px;
-                padding: 8px 16px;
-            }
-            .container {
-                width: 90%;
-                padding: 15px;
-            }
-        }
-
-        /* Media Query para pantallas muy pequeñas (móviles) */
-        @media (max-width: 480px) {
-            .title {
-                font-size: 18px;
-            }
-            .speed {
-                font-size: 24px;
-            }
-            .units {
-                font-size: 14px;
-            }
-            .button {
-                font-size: 12px;
-                padding: 6px 12px;
-            }
+        #myChart {
+            width: 100%;
+            height: 250px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="title">Test de Velocidad MTM</div>
-        
+
         <div>Velocidad de descarga</div>
         <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
-        
+
         <div>Velocidad de carga</div>
         <div id="uploadSpeed" class="speed">0 <span class="units">Mbps</span></div>
+
+        <div id="ipInfo"></div> <!-- Aquí se mostrará la IP y el proveedor -->
 
         <!-- Botones para medir velocidad de descarga o carga -->
         <button class="button" onclick="measureDownload()">Medir Descarga</button>
         <button class="button" onclick="measureUpload()">Medir Carga</button>
+
+        <!-- Gráfica de progreso -->
+        <canvas id="myChart"></canvas>
     </div>
 
     <script>
+        // Inicializar la gráfica con Chart.js
+        var ctx = document.getElementById('myChart').getContext('2d');
+        var chart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: [], // Etiquetas del tiempo
+                datasets: [{
+                    label: 'Velocidad de Descarga',
+                    borderColor: 'rgb(0, 170, 255)',
+                    data: [],
+                    fill: false
+                }, {
+                    label: 'Velocidad de Carga',
+                    borderColor: 'rgb(255, 165, 0)',
+                    data: [],
+                    fill: false
+                }]
+            },
+            options: {
+                scales: {
+                    x: {
+                        type: 'linear',
+                        position: 'bottom'
+                    },
+                    y: {
+                        min: 0,
+                        max: 100
+                    }
+                }
+            }
+        });
+
+        // Función para obtener la IP y el proveedor usando ipinfo.io
+        async function getIpInfo() {
+            const ipInfoEl = document.getElementById('ipInfo');
+            const response = await fetch('https://ipinfo.io/json?token=YOUR_TOKEN'); // Sustituye YOUR_TOKEN por un token si lo necesitas
+            const data = await response.json();
+            ipInfoEl.textContent = `IP: ${data.ip}, Proveedor: ${data.org}`;
+        }
+
         // Función para medir la velocidad de descarga
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
@@ -128,6 +141,11 @@
                 if (currentDownloadSpeed < maxDownloadSpeed) {
                     currentDownloadSpeed += 0.5; // Incremento gradual de velocidad
                     downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
+
+                    // Agregar datos a la gráfica
+                    chart.data.labels.push(chart.data.labels.length + 1);
+                    chart.data.datasets[0].data.push(currentDownloadSpeed);
+                    chart.update();
                 } else {
                     clearInterval(downloadInterval);
                     downloadSpeedEl.innerHTML = `${maxDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
@@ -156,12 +174,20 @@
                 if (currentUploadSpeed < maxUploadSpeed) {
                     currentUploadSpeed += 0.5; // Incremento gradual de velocidad
                     uploadSpeedEl.innerHTML = `${currentUploadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
+
+                    // Agregar datos a la gráfica
+                    chart.data.labels.push(chart.data.labels.length + 1);
+                    chart.data.datasets[1].data.push(currentUploadSpeed);
+                    chart.update();
                 } else {
                     clearInterval(uploadInterval);
                     uploadSpeedEl.innerHTML = `${maxUploadSpeed} <span class="units">Mbps</span> (finalizado)`;
                 }
             }, 50);
         }
+
+        // Llamar a la función para obtener IP y proveedor
+        getIpInfo();
     </script>
 </body>
 </html>
