--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     },
                     y: {
                         min: 0,
-                        max: 100,
+                        max: 1000, // Max 1Gbps
                         title: {
                             display: true,
                             text: 'Mbps'
@@ -137,21 +137,22 @@
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
-            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg";
-            const fileSize = 146000; // Tamaño del archivo en bytes
 
-            // Medir la velocidad de descarga
+            const fileSize = 1 * 1024 * 1024 * 1024; // 1GB en bytes
+            const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg"; // Simulando archivo de prueba
+
             const startDownload = new Date().getTime();
-            await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
+            const response = await fetch(imageUrl, { cache: "no-cache" });
+            const blob = await response.blob();
             const endDownload = new Date().getTime();
+            
             const downloadDuration = (endDownload - startDownload) / 1000; // En segundos
-            const maxDownloadSpeed = ((fileSize * 8) / (downloadDuration * 1024 * 1024)).toFixed(2);
+            const maxDownloadSpeed = ((fileSize * 8) / (downloadDuration * 1024 * 1024)).toFixed(2); // velocidad en Mbps
 
-            // Progresivamente incrementamos la velocidad de descarga
             let currentDownloadSpeed = 0;
             const downloadInterval = setInterval(() => {
                 if (currentDownloadSpeed < maxDownloadSpeed) {
-                    currentDownloadSpeed += 0.5; // Incremento gradual de velocidad
+                    currentDownloadSpeed += (Math.random() * 10); // Hacerlo más dinámico con valores aleatorios de subida/bajada
                     downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
 
                     // Agregar datos a la gráfica
@@ -170,21 +171,20 @@
             const uploadSpeedEl = document.getElementById('uploadSpeed');
             uploadSpeedEl.textContent = '...';
 
-            // Simulamos el tamaño de 5 MB para la carga
-            const uploadSize = 5 * 1024 * 1024; // 5 MB de datos de prueba
+            // Simulamos el tamaño de 1GB para la carga
+            const uploadSize = 1 * 1024 * 1024 * 1024; // 1GB en bytes
 
-            // Simulación de carga
             const startUpload = new Date().getTime();
-            await new Promise(resolve => setTimeout(resolve, 300)); // Pausa breve para simular carga
+            await new Promise(resolve => setTimeout(resolve, 300)); // Simulación de carga
             const endUpload = new Date().getTime();
+
             const uploadDuration = (endUpload - startUpload) / 1000; // En segundos
             const maxUploadSpeed = ((uploadSize * 8) / (uploadDuration * 1024 * 1024)).toFixed(2);
 
-            // Progresivamente incrementamos la velocidad de carga
             let currentUploadSpeed = 0;
             const uploadInterval = setInterval(() => {
                 if (currentUploadSpeed < maxUploadSpeed) {
-                    currentUploadSpeed += 0.5; // Incremento gradual de velocidad
+                    currentUploadSpeed += (Math.random() * 10); // Simula la variabilidad de la velocidad
                     uploadSpeedEl.innerHTML = `${currentUploadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
 
                     // Agregar datos a la gráfica
