--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="ipInfo"></div> <!-- Aquí se mostrará la IP y el proveedor -->
 
         <!-- Botón para medir velocidad de descarga -->
-        <button class="button" onclick="measureDownload()">Medir Descarga</button>
+        <button class="button" onclick="measureDownload()">Iniciar Test</button>
 
         <!-- Gráfica de progreso -->
         <canvas id="myChart"></canvas>
