--- a/index.html
+++ b/index.html
@@ -6,78 +6,96 @@
     <title>Test de Velocidad</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
+        /* Diseño básico y limpio */
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #6A11CB 0%, #2575FC 100%);
+            background-color: #f1f1f1;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            color: white;
+            color: #333;
         }
+
         .container {
             text-align: center;
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: #ffffff;
             border-radius: 10px;
             padding: 30px;
-            width: 90%;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            width: 80%;
             max-width: 500px;
         }
+
         .title {
-            font-size: 30px;
-            margin-bottom: 10px;
+            font-size: 32px;
+            margin-bottom: 20px;
         }
+
         .speed {
             font-size: 60px;
             font-weight: bold;
-            margin: 10px 0;
+            color: #00aaff;
+            margin: 20px 0;
         }
+
         .units {
             font-size: 24px;
+            color: #555;
         }
-        .progress-bar-container {
-            width: 100%;
-            height: 20px;
-            background: rgba(255, 255, 255, 0.3);
-            border-radius: 10px;
-            margin: 30px 0;
-        }
-        .progress-bar {
-            height: 100%;
-            background: #00aaff;
-            border-radius: 10px;
-            width: 0%;
-        }
+
         .button {
             background-color: #00aaff;
             color: white;
-            padding: 12px 25px;
+            padding: 15px 40px;
             border: none;
             border-radius: 8px;
             font-size: 18px;
             cursor: pointer;
             transition: background 0.3s;
         }
+
         .button:hover {
             background-color: #0077cc;
         }
+
         .ip-info {
-            margin-top: 20px;
+            margin-top: 15px;
             font-size: 16px;
-            color: #ddd;
+            color: #555;
+        }
+
+        .progress-bar-container {
+            width: 100%;
+            height: 10px;
+            background-color: #ddd;
+            border-radius: 5px;
+            margin: 20px 0;
+        }
+
+        .progress-bar {
+            height: 100%;
+            background-color: #00aaff;
+            border-radius: 5px;
+            width: 0%;
         }
     </style>
 </head>
 <body>
+
     <div class="container">
         <div class="title">Test de Velocidad</div>
+
         <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
+
         <div class="progress-bar-container">
             <div id="progressBar" class="progress-bar"></div>
         </div>
+
         <button class="button" onclick="measureDownload()">Iniciar Test</button>
+
         <div id="ipInfo" class="ip-info"></div>
     </div>
 
@@ -122,6 +140,7 @@
         // Llamar a la función para obtener la IP y proveedor
         getIpInfo();
     </script>
+
 </body>
 </html>
 
