--- a/index.html
+++ b/index.html
@@ -1,106 +1,122 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/speed.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test de Velocidad</title>
+    <title>Test de Velocidad MTM</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        /* Diseño básico y limpio */
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f1f1f1;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            color: #333;
-        }
-
-        .container {
+            margin: 0;
+            background: linear-gradient(135deg, #6A11CB 0%, #2575FC 100%);
+            color: #fff;
             text-align: center;
-            background-color: #ffffff;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            width: 80%;
-            max-width: 500px;
         }
-
+        .container {
+            max-width: 500px;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            width: 90%;
+        }
         .title {
-            font-size: 32px;
+            font-size: 24px;
             margin-bottom: 20px;
         }
-
         .speed {
-            font-size: 60px;
+            font-size: 36px;
             font-weight: bold;
-            color: #00aaff;
-            margin: 20px 0;
+            margin: 10px 0;
         }
-
         .units {
-            font-size: 24px;
-            color: #555;
+            font-size: 18px;
+            font-weight: normal;
         }
-
         .button {
             background-color: #00aaff;
             color: white;
-            padding: 15px 40px;
+            padding: 10px 20px;
             border: none;
             border-radius: 8px;
-            font-size: 18px;
+            font-size: 16px;
             cursor: pointer;
             transition: background 0.3s;
+            margin: 5px;
         }
-
         .button:hover {
             background-color: #0077cc;
         }
-
-        .ip-info {
+        #myChart {
+            width: 100%;
+            height: 250px;
+            margin-top: 20px;
+        }
+        #ipInfo {
             margin-top: 15px;
             font-size: 16px;
-            color: #555;
-        }
-
-        .progress-bar-container {
-            width: 100%;
-            height: 10px;
-            background-color: #ddd;
-            border-radius: 5px;
-            margin: 20px 0;
-        }
-
-        .progress-bar {
-            height: 100%;
-            background-color: #00aaff;
-            border-radius: 5px;
-            width: 0%;
         }
     </style>
 </head>
 <body>
-
     <div class="container">
-        <div class="title">Test de Velocidad</div>
+        <div class="title">Test de Velocidad MTM</div>
 
+        <div>Velocidad de descarga</div>
         <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
 
-        <div class="progress-bar-container">
-            <div id="progressBar" class="progress-bar"></div>
-        </div>
+        <div id="ipInfo"></div> <!-- Aquí se mostrará la IP y el proveedor -->
 
+        <!-- Botón para medir velocidad de descarga -->
         <button class="button" onclick="measureDownload()">Iniciar Test</button>
 
-        <div id="ipInfo" class="ip-info"></div>
+        <!-- Gráfica de progreso -->
+        <canvas id="myChart"></canvas>
     </div>
 
     <script>
-        // Función para obtener la IP y proveedor
+        // Inicializar la gráfica con Chart.js
+        var ctx = document.getElementById('myChart').getContext('2d');
+        var chart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: [], // Etiquetas del tiempo
+                datasets: [{
+                    label: 'Velocidad de Descarga',
+                    borderColor: 'rgb(0, 170, 255)',
+                    data: [],
+                    fill: false
+                }]
+            },
+            options: {
+                responsive: true,
+                scales: {
+                    x: {
+                        type: 'linear',
+                        position: 'bottom',
+                        ticks: {
+                            display: false // Ocultar etiquetas del eje X (tiempo)
+                        }
+                    },
+                    y: {
+                        min: 0,
+                        max: 1000, // Hasta 1000 Mbps (1 Gbps)
+                        title: {
+                            display: true,
+                            text: 'Mbps'
+                        }
+                    }
+                }
+            }
+        });
+
+        // Función para obtener la IP y el proveedor usando ipinfo.io
         async function getIpInfo() {
             const ipInfoEl = document.getElementById('ipInfo');
             const response = await fetch('https://ipinfo.io/json?token=YOUR_TOKEN'); // Sustituye YOUR_TOKEN por un token si lo necesitas
@@ -111,38 +127,41 @@
         // Función para medir la velocidad de descarga
         async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
-            const progressBar = document.getElementById('progressBar');
-            downloadSpeedEl.textContent = 'Calculando...';
-            progressBar.style.width = '0%';
-
+            downloadSpeedEl.textContent = '...';
             const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg";
             const fileSize = 146000; // Tamaño del archivo en bytes
 
+            // Medir la velocidad de descarga
             const startDownload = new Date().getTime();
             await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
             const endDownload = new Date().getTime();
             const downloadDuration = (endDownload - startDownload) / 1000; // En segundos
             const maxDownloadSpeed = ((fileSize * 8) / (downloadDuration * 1024 * 1024)).toFixed(2);
 
+            // Progresivamente incrementamos la velocidad de descarga
             let currentDownloadSpeed = 0;
-            const interval = setInterval(() => {
+            const downloadInterval = setInterval(() => {
                 if (currentDownloadSpeed < maxDownloadSpeed) {
-                    currentDownloadSpeed += 0.5; // Incremento gradual
+                    currentDownloadSpeed += 0.5; // Incremento gradual de velocidad
                     downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
-                    progressBar.style.width = `${(currentDownloadSpeed / maxDownloadSpeed) * 100}%`;
+
+                    // Agregar datos a la gráfica
+                    chart.data.labels.push(chart.data.labels.length + 1);
+                    chart.data.datasets[0].data.push(currentDownloadSpeed);
+                    chart.update();
                 } else {
-                    clearInterval(interval);
-                    downloadSpeedEl.innerHTML = `${maxDownloadSpeed} <span class="units">Mbps</span> (Finalizado)`;
+                    clearInterval(downloadInterval);
+                    downloadSpeedEl.innerHTML = `${maxDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
                 }
             }, 50);
         }
 
-        // Llamar a la función para obtener la IP y proveedor
+        // Llamar a la función para obtener IP y proveedor
         getIpInfo();
     </script>
-
 </body>
 </html>
+
 
 
 
