--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/molavita/speed/refs/heads/gh-pages/imagen/speed.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medidor de Velocidad de WiFi</title>
+    <title>Test de Velocidad MTM</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,18 +19,19 @@
             text-align: center;
         }
         .container {
-            max-width: 400px;
+            max-width: 500px;
             padding: 20px;
             background-color: rgba(0, 0, 0, 0.5);
             border-radius: 12px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            width: 90%;
         }
         .title {
             font-size: 24px;
             margin-bottom: 20px;
         }
         .speed {
-            font-size: 48px;
+            font-size: 36px;
             font-weight: bold;
             margin: 10px 0;
         }
@@ -45,50 +48,117 @@
             font-size: 16px;
             cursor: pointer;
             transition: background 0.3s;
+            margin: 5px;
         }
         .button:hover {
             background-color: #0077cc;
+        }
+        #myChart {
+            width: 100%;
+            height: 250px;
+            margin-top: 20px;
+        }
+        #ipInfo {
+            margin-top: 15px;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="title">Medidor de Velocidad de WiFi</div>
-        <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
+        <div class="title">Test de Velocidad MTM</div>
+
         <div>Velocidad de descarga</div>
-        <button class="button" onclick="measureSpeed()">Iniciar Prueba</button>
+        <div id="downloadSpeed" class="speed">0 <span class="units">Mbps</span></div>
+
+        <div id="ipInfo"></div> <!-- Aquí se mostrará la IP y el proveedor -->
+
+        <!-- Botón para medir velocidad de descarga -->
+        <button class="button" onclick="measureDownload()">Medir Descarga</button>
+
+        <!-- Gráfica de progreso -->
+        <canvas id="myChart"></canvas>
     </div>
 
     <script>
-        async function measureSpeed() {
+        // Inicializar la gráfica con Chart.js
+        var ctx = document.getElementById('myChart').getContext('2d');
+        var chart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: [], // Etiquetas del tiempo
+                datasets: [{
+                    label: 'Velocidad de Descarga',
+                    borderColor: 'rgb(0, 170, 255)',
+                    data: [],
+                    fill: false
+                }]
+            },
+            options: {
+                responsive: true,
+                scales: {
+                    x: {
+                        type: 'linear',
+                        position: 'bottom',
+                        ticks: {
+                            display: false // Ocultar etiquetas del eje X (tiempo)
+                        }
+                    },
+                    y: {
+                        min: 0,
+                        max: 1000, // Hasta 1000 Mbps (1 Gbps)
+                        title: {
+                            display: true,
+                            text: 'Mbps'
+                        }
+                    }
+                }
+            }
+        });
+
+        // Función para obtener la IP y el proveedor usando ipinfo.io
+        async function getIpInfo() {
+            const ipInfoEl = document.getElementById('ipInfo');
+            const response = await fetch('https://ipinfo.io/json?token=YOUR_TOKEN'); // Sustituye YOUR_TOKEN por un token si lo necesitas
+            const data = await response.json();
+            ipInfoEl.textContent = `IP: ${data.ip}, Proveedor: ${data.org}`;
+        }
+
+        // Función para medir la velocidad de descarga
+        async function measureDownload() {
             const downloadSpeedEl = document.getElementById('downloadSpeed');
             downloadSpeedEl.textContent = '...';
-
             const imageUrl = "https://upload.wikimedia.org/wikipedia/commons/3/3f/JPEG_example_flower.jpg";
-            const fileSize = 146000; // Tamaño aproximado de la imagen en bytes
+            const fileSize = 146000; // Tamaño del archivo en bytes
 
-            // Mide el tiempo que toma descargar el archivo
-            const startTime = new Date().getTime();
+            // Medir la velocidad de descarga
+            const startDownload = new Date().getTime();
             await fetch(imageUrl, { cache: "no-cache" }).then(response => response.blob());
-            const endTime = new Date().getTime();
+            const endDownload = new Date().getTime();
+            const downloadDuration = (endDownload - startDownload) / 1000; // En segundos
+            const maxDownloadSpeed = ((fileSize * 8) / (downloadDuration * 1024 * 1024)).toFixed(2);
 
-            // Calcula la velocidad máxima en Mbps
-            const duration = (endTime - startTime) / 1000; // Tiempo en segundos
-            const maxSpeedMbps = ((fileSize * 8) / (duration * 1024 * 1024)).toFixed(2);
+            // Progresivamente incrementamos la velocidad de descarga
+            let currentDownloadSpeed = 0;
+            const downloadInterval = setInterval(() => {
+                if (currentDownloadSpeed < maxDownloadSpeed) {
+                    currentDownloadSpeed += 0.5; // Incremento gradual de velocidad
+                    downloadSpeedEl.innerHTML = `${currentDownloadSpeed.toFixed(2)} <span class="units">Mbps</span>`;
 
-            // Muestra la velocidad progresivamente hasta llegar al valor máximo
-            let currentSpeed = 0;
-            const interval = setInterval(() => {
-                if (currentSpeed < maxSpeedMbps) {
-                    currentSpeed += 0.5; // Incremento gradual de velocidad (ajusta según prefieras)
-                    downloadSpeedEl.innerHTML = ${currentSpeed.toFixed(2)} <span class="units">Mbps</span>;
+                    // Agregar datos a la gráfica
+                    chart.data.labels.push(chart.data.labels.length + 1);
+                    chart.data.datasets[0].data.push(currentDownloadSpeed);
+                    chart.update();
                 } else {
-                    // Cuando alcanzamos el máximo, detenemos el intervalo y mostramos el valor final
-                    clearInterval(interval);
-                    downloadSpeedEl.innerHTML = ${maxSpeedMbps} <span class="units">Mbps</span> (completa);
+                    clearInterval(downloadInterval);
+                    downloadSpeedEl.innerHTML = `${maxDownloadSpeed} <span class="units">Mbps</span> (finalizado)`;
                 }
-            }, 50); // Intervalo de actualización (ajusta para un efecto más rápido o lento)
+            }, 50);
         }
+
+        // Llamar a la función para obtener IP y proveedor
+        getIpInfo();
     </script>
 </body>
 </html>
+
